# agent_factory

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  LICENSE  README.md  launch-claude.bat  launch-claude.command  launch-claude.sh  launch-codex.bat  launch-codex.command  launch-codex.sh  pyproject.toml
evals/: __init__.py  conftest.py  test_persona_eval.py  test_policy_eval.py  test_skill_eval.py
evals/scenarios/: allow_policies.yaml  ask_policies.yaml  deny_policies.yaml  persona_consistency.yaml  skill_activation.yaml
examples/: code-assistant.yaml  data-analysis-bot.yaml
examples/code-assistant/: .env.example  CLAUDE.md  CODEX.md  README.md  agent_spec.yaml  approval_log.jsonl  meta.yaml
examples/data-analysis-bot/: .env.example  CLAUDE.md  CODEX.md  README.md  agent_spec.yaml  meta.yaml  (+1 more)
factory/: __init__.py  __main__.py
prompts/: 00-overview.md  manifest.yaml  phase-1a-scaffold.md  phase-1b-approval-validator.md  phase-2a-renderer-builder.md  phase-2b-generator-api.md  phase-3a-single-agent-templates.md  phase-3b-multi-agent-templates.md  phase-4a-registry-loader.md  phase-5a-workflow-files.md  phase-6a-integration-tests.md  phase-6b-release-prep.md
schemas/: agent_spec.schema.yaml  persona.schema.yaml  policy.schema.yaml  skill.schema.yaml
templates/: CHANGELOG.md
uiux-design-helper/: AGENTS.md  CLAUDE.md  CODEX.md  README.md  agent_spec.yaml  approval_log.jsonl  flowerplus-redesign.html  launch-claude.bat  launch-claude.command  launch-claude.sh  launch-codex.bat  launch-codex.command  launch-codex.sh  meta.yaml  orchestrator.md
(+282 files in other folders)
